# nemiygin_practice

./: CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h  openmp_settings.cpp  openmp_settings.h  start_scripts.sh
